# vadc-gwas-tools

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  NOTICE.txt  README.md  pyproject.toml
.github/workflows/: ci.yaml  image_push_build.yaml
tests/: test_common_cohort_service.py  test_common_indexd.py  test_common_top_hits_heap.py  test_common_wts.py  test_create_indexd_record.py  test_subcommand.py  test_subcommand_curate_gwas_hits.py  test_subcommand_filter_segments.py  test_subcommand_get_cohort_attrition_table.py  test_subcommand_get_cohort_pheno_csv.py  test_subcommand_get_descriptive_statistics.py  test_subcommand_get_gwas_metadata.py  test_subcommand_get_pheweb_plot_json.py  test_subcommand_process_input_variables.py  test_subcommand_split_filename.py  utils.py
tests/system_tests/: test_docker.sh
tests/system_tests/expected_output/: expected_manhattan_out.json
tests/system_tests/input/: simple1.tsv
vadc_gwas_tools/: __main__.py
vadc_gwas_tools/common/: cohort_middleware.py  const.py  indexd.py  logger.py  top_hits_heap.py  wts.py
vadc_gwas_tools/subcommands/: __init__.py  base.py  create_indexd_record.py  curate_gwas_hits.py  filter_segments.py  get_attrition_csv.py  get_cohort_pheno_csv.py  get_descriptive_stats.py  get_gwas_metadata.py  get_pheweb_plot_json.py  process_input_variables.py  split_filename_by_chromosome.py
vadc_gwas_tools/template/: vadc_citation_template.txt
