[tool.poetry]
name = "vadc-gwas-tools"
description = "CLI with subcommands that support the GWAS workflows."
version = "0.0.1"
repository = "https://github.com/uc-cdis/vadc-gwas-tools"
authors = ["Kyle Hernandez <kmhernan@uchicago.edu>"]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]
packages = [
    { include = "vadc_gwas_tools" },
]

[tool.poetry.scripts]
vadc-gwas-tools = 'vadc_gwas_tools.__main__:main'

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
