[tool.poetry]
name = "vadc-gwas-tools"
description = "CLI with subcommands that support the GWAS workflows."
version = "1.2.2"
repository = "https://github.com/uc-cdis/vadc-gwas-tools"
authors = ["Kyle Hernandez <kmhernan@uchicago.edu>"]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]
packages = [
    { include = "vadc_gwas_tools" },
]

[tool.poetry.scripts]
vadc-gwas-tools = 'vadc_gwas_tools.__main__:main'

[tool.poetry.dependencies]
python = ">= 3.8, < 3.12"
requests = "^2.27.1"
PyYAML = "^6.0"
urllib3 = "1.26.9"
scipy = "^1.10.1"
PheWeb = "^1.3.16"
pytest = "^8.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses=true
line_length = 88
